<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/prefs_text_notificacao">

        <CheckBoxPreference
            android:key="notification_checkbox_preference"
            android:summary="@string/prefs_text_notificacao_summary"
            android:title="@string/prefs_text_notificacao_title" />

        <ListPreference
            android:dialogTitle="@string/prefs_text_notificacao_update_title"
            android:entries="@array/frequencias"
            android:entryValues="@array/frequencias"
            android:key="list_preference_frequencia"
            android:summary="@string/prefs_text_notificacao_update_summary"
            android:title="@string/prefs_text_notificacao_update_title" />

        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notification_checkbox_preference"
            android:key="notifications_ringtone"
            android:ringtoneType="notification"
            android:title="@string/prefs_text_notificacao_ringtone" />

        <SwitchPreference
            android:defaultValue="true"
            android:dependency="notification_checkbox_preference"
            android:key="notifications_vibrate"
            android:title="@string/prefs_text_notificacao_vibrate" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefs_text_theme_title">

        <ListPreference
            android:dialogTitle="@string/prefs_text_theme_title"
            android:entries="@array/temas"
            android:entryValues="@array/temas"
            android:key="list_preference_temas"
            android:summary="@string/prefs_text_theme_title_summary"
            android:title="@string/prefs_text_theme_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefs_text_sound_title">

        <CheckBoxPreference
            android:key="checkbox_sound_preference"
            android:summary="@string/prefs_text_sound_summary"
            android:title="@string/prefs_text_sound_title" />

    </PreferenceCategory>

</PreferenceScreen>