<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_game"
            android:icon="@drawable/ic_multiplayer"
            android:title="@string/title_game" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_statistics"
            android:title="@string/title_statistics" />

        <item
            android:id="@+id/nav_online"
            android:icon="@drawable/ic_online"
            android:title="@string/title_online" />

        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/ic_admin"
            android:title="@string/title_admin" />

    </group>

    <group
        android:id="@+id/group_settings"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/vt_menu_settings"
            android:title="@string/title_activity_settings" />
    </group>


</menu>
