<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.ipp.estg.cmu.ui.AdminNovoNivelFragment">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/SecondaryTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/novo_nivel_layout_margin"
                android:text="@string/admin_novo_nivel_novo" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/novo_nivel_layout_margin"
                android:padding="@dimen/novo_nivel_layout_margin">

                <EditText
                    android:id="@+id/level_title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/novo_nivel_layout_margin"
                    android:hint="@string/admin_novo_nivel_nome" />

            </android.support.v7.widget.CardView>

            <TextView
                style="@style/SecondaryTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/novo_nivel_layout_margin"
                android:text="@string/admin_novo_nivel_pontuacoes" />


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/novo_nivel_layout_margin"
                android:padding="@dimen/novo_nivel_layout_margin">

                <EditText
                    android:id="@+id/level_pontuacao_base_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/novo_nivel_layout_margin"
                    android:hint="@string/admin_novo_nivel_base"
                    android:inputType="number" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/novo_nivel_layout_margin"
                android:padding="@dimen/novo_nivel_layout_margin">

                <EditText
                    android:id="@+id/level_errada_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/novo_nivel_layout_margin"
                    android:hint="@string/admin_novo_nivel_errada"
                    android:inputType="number" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/novo_nivel_layout_margin"
                android:padding="@dimen/novo_nivel_layout_margin">

                <EditText
                    android:id="@+id/level_ajuda_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/novo_nivel_layout_margin"
                    android:hint="@string/admin_novo_nivel_ajuda"
                    android:inputType="number" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/novo_nivel_layout_margin"
                android:padding="@dimen/novo_nivel_layout_margin">

                <EditText
                    android:id="@+id/level_ajuda_num_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/novo_nivel_layout_margin"
                    android:hint="@string/admin_novo_nivel_ajuda_num"
                    android:inputType="number" />

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchor="@id/frame_layout"
        app:layout_anchorGravity="bottom|right|end"
        app:srcCompat="@drawable/ic_check" />
</FrameLayout>