<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/layout_fingerprint_padding">

        <TextView
            style="@style/PrimaryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title" />

        <TextView
            style="@style/PrimaryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title_admin" />

        <TextView
            style="@style/SecondaryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_sub_title" />

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_top_space" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/novo_nivel_layout_margin"
            android:padding="@dimen/novo_nivel_layout_margin">

            <EditText
                android:id="@+id/edit_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/novo_nivel_layout_margin"
                android:hint="@string/setup_edit_pin_hint"
                android:inputType="numberPassword" />

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/dialog_ok"
            style="@style/PrimaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/dialog_bt_ok" />


        <LinearLayout
            android:id="@+id/fingerprint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/layout_fingerprint_padding">

            <ImageView
                android:id="@+id/fingerprint_icon_info"
                android:layout_width="@dimen/setup_fingerprint_size"
                android:layout_height="@dimen/setup_fingerprint_size"
                android:layout_gravity="center"
                android:background="@drawable/ic_fingerprint" />

            <LinearLayout
                android:id="@+id/fingerprint_layout_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/layout_fingerprint_padding">

                <ImageView
                    android:id="@+id/fingerprint_icon_status"
                    android:layout_width="@dimen/setup_fingerprint_size"
                    android:layout_height="@dimen/setup_fingerprint_size"
                    android:padding="@dimen/layout_fingerprint_padding" />

                <TextView
                    android:id="@+id/fingerprint_text_status"
                    style="@style/SecondaryTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</ScrollView>