<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:padding="@dimen/setup_custom_layout_padding">


    <TextView
        android:id="@+id/section_admin_label"
        style="@style/PrimaryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/setup_page4_title" />

    <TextView
        android:id="@+id/section_admin_description"
        style="@style/SecondaryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/setup_page4_subtitle" />


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/novo_nivel_layout_margin"
        android:padding="@dimen/novo_nivel_layout_margin">

        <EditText
            android:id="@+id/edit_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/novo_nivel_layout_margin"
            android:hint="@string/setup_edit_pin_hint"
            android:inputType="numberPassword" />

    </android.support.v7.widget.CardView>


    <LinearLayout
        android:id="@+id/fingerprint_layout_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/setup_custom_layout_padding">

        <ImageView
            android:id="@+id/fingerprint_icon_status"
            android:layout_width="@dimen/setup_fingerprint_size"
            android:layout_height="@dimen/setup_fingerprint_size"
            android:padding="@dimen/setup_custom_layout_padding" />

        <TextView
            android:id="@+id/fingerprint_text_status"
            style="@style/SecondaryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>